[package]
name = "xenevtchn"
version = "0.1.5"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
repository = "https://github.com/Wenzel/xenevtchn"
readme = "README.md"
keywords = ["xen"]
description = "Rust bindings for Xen event channel API"
license = "GPL-3.0-only"

[dependencies]
libloading = "0.7.0"
log = "0.4.8"
xenevtchn-sys = "0.1.2"
